# The-Last-Place-You-Look

./: .gitignore  README.md  package-lock.json  package.json
docs/: README.md
docs/01-product/: glossary.md  mvp.md  personas.md  vision.md
docs/02-features/: duplicate-review.md  information-architecture.md
docs/03-architecture/: architecture-overview.md  domain-model.md  duplicate-and-relationship-engine.md  protection-and-safety-model.md  scan-and-index-pipeline.md
docs/03-architecture/adrs/: 0001-stack.md  0002-asset-model.md  0003-per-drive-quarantine.md  0004-volume-guid-identity.md  0005-tauri-v2.md  0006-zustand.md  0007-rusqlite-migration.md  0008-preferred-copy-model.md  0009-path-continuity.md  0010-on-demand-hashing.md
docs/04-roadmap/: epic-01-stories.md  epic-02-stories.md  epic-03-stories.md  epics.md  milestones.md  open-questions.md
docs/05-quality/: release-checklist.md  test-strategy.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  library.rs  mod.rs  os.rs  pipeline.rs  sources.rs
src-tauri/src/domain/: file_instance.rs  library.rs  mod.rs  scan_job.rs  storage_source.rs
src-tauri/src/persistence/: db.rs  mod.rs  volume.rs
src-tauri/src/services/: mod.rs  pipeline.rs  sources.rs  thumbnails.rs
src/pages/: Duplicates.tsx  Library.tsx  Sources.tsx
src/stores/: appStore.ts  libraryStore.ts  navigationStore.ts  pipelineStore.ts  sourceStore.ts
